# icfpc2023

./: .gitignore  README.md  download-all.sh  submit-all.sh  submit.sh
code/rust/: Cargo.toml
code/rust/src/: README.md  genetics.rs  geom.rs  http_api.rs  io.rs  main.rs  optimizer.rs  score.rs  solution.rs
solutions-20230707-225027/: problem-1.json  problem-10.json  problem-11.json  problem-12.json  problem-13.json  problem-15.json  problem-16.json  problem-17.json  problem-18.json  problem-19.json  problem-2.json  problem-20.json  problem-21.json  problem-22.json  problem-23.json  problem-24.json  problem-27.json  problem-29.json  problem-3.json  problem-30.json  problem-31.json  problem-32.json  problem-33.json  problem-34.json  problem-35.json  problem-36.json  problem-37.json  problem-38.json  problem-39.json  problem-4.json  problem-40.json  problem-41.json  problem-42.json  problem-43.json  problem-44.json  problem-45.json  problem-46.json  problem-47.json  problem-48.json  problem-49.json  (+10 more)
solutions-20230708-014148/: problem-1.json  problem-11.json  problem-12.json  problem-13.json  problem-14.json  problem-17.json  problem-19.json  problem-20.json  problem-24.json  problem-28.json  problem-3.json  problem-32.json  problem-33.json  problem-36.json  problem-38.json  problem-39.json  problem-4.json  problem-42.json  problem-44.json  problem-45.json  problem-46.json  problem-47.json  problem-48.json  problem-49.json  problem-5.json  problem-50.json  problem-52.json  problem-53.json  problem-54.json  problem-55.json  problem-6.json  problem-7.json  problem-8.json  (+1 more)
(+152 files in other folders)
