[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.167", features = ["derive"]}
serde_json = "1.0.100"
anyhow = "1.0.71"
rayon = "1.7.0"
itertools = "0.11.0"
derive_more = "0.99.17"
genevo = "0.7.1"
num-format = "0.4.4"
clap = {version = "4.3.11", features = ["cargo"]}
float-ord = "0.3.2"
rouille = "3.6.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
